--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
-    "express": "^5.2.0",
+    "express": "^5.2.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
     "knex": "^3.1.0",
     "pg": "^8.16.3"
